...
      }
    },
    "Appearance" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Calibrating your communication profile..." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Choose your theme." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Claim My 3-Day Free Trial" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Classic" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Continue" : {
      "comment" : "A button that lets the user continue a task.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Control any conversation." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Explanation" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "FROM YOUR BOSS" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Get Started" : {
      "comment" : "A button label.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Here's what we do." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Hold to become a Text Master" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Language" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Light" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Non-Conforming" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Perfect. I'll do it my way then." : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Refine" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Reply" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Savage" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "SETTINGS" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Skip Onboarding (Debug)" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Start Free Trial" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "We've got great news for you." : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Your Data is Safe With Us." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Your name" : {
      "localizations" : {
        "de" : {
...
